src/eval/snapshots/monkey_language_server__eval__test__string_bang.snap
---
source: src/eval/test.rs
description: "let x = \"foo\" ! \"foo\";"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [],
    scope_range: "(0,0)->(0,22)",
    parent_range: None,
    children: [],
}

========================

[
    Error(ExpectedTokenNotFound(";"), (0,14)->(0,15)),
]
