src/eval/snapshots/monkey_language_server__eval__test__string_div.snap
---
source: src/eval/test.rs
description: "let x = \"foo\" / \"foo\";"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Unknown, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("x", "(0,4)->(0,5)"),
    ],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[
    Error(UnknownOperator("str", "str", "/"), (0,14)->(0,15)),
]
