src/eval/snapshots/monkey_language_server__eval__test__string_eq.snap
---
source: src/eval/test.rs
description: "let x = \"foo\" == \"foo\";"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Spanned(Bool, x, (0,4)->(0,5)),
    ],
    outer: None,
    inner: [],
}

========================

[]
