src/eval/snapshots/monkey_language_server__eval__test__string_not_eq.snap
---
source: src/eval/test.rs
description: "let x = \"foo\" != \"foo\";"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Bool, (0,4)->(0,5)),
        ),
    ],
    parent: None,
    children: [],
}

========================

[]
