src/eval/snapshots/monkey_language_server__eval__test__unhashable_hash_index.snap
---
source: src/eval/test.rs
description: "let x = {1: 2}[{}];"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Unknown, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("x", "(0,4)->(0,5)"),
    ],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[
    Error(Unhashable("hash"), (0,15)->(0,16)),
]
